# CMake-LinkSharedWithStatic-Example

./: CMakeLists.txt  FooShared.c  FooShared.h  FooStatic.c  FooStatic.h  Main.c  README.md
